<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_fav"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/txt_fav"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/txt_share"
        app:showAsAction="always" />
</menu>