<resources>
    <string name="app_name">Movie Catalogue</string>

    <string name="movie">Movie</string>
    <string name="tvshow">Tv Show</string>

    <string name="txt_detail">Detail</string>
    <string name="txt_title">Title</string>
    <string name="txt_year">Year Released</string>
    <string name="txt_overview">Overview</string>
    <string name="txt_share">Share</string>
    <string name="txt_fav">Favorite</string>

    <string name="txt_favorited">Favorited</string>
    <string name="txt_unfavorite">unFavorite</string>
    <string name="txt_error">Oops, something wrong</string>
    <string name="txt_choose">Select menu to be displayed</string>
    <string name="txt_image_url">https://image.tmdb.org/t/p/original</string>

    <string name="message_undo">Undo Delete?</string>
    <string name="message_ok">OK</string>
</resources>